[tool.poetry]
name = "advanced-seminar"
version = "0.1.0"
description = ""
authors = ["BBaumgartne <76727447+schepa123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
langchain-community = "^0.3.24"
tiktoken = "^0.9.0"
langchainhub = "^0.1.21"
langchain = "^0.3.25"
langgraph = "^0.4.5"
langchain-openai = "^0.3.17"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
datasets = "^3.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
